fix (#219): fix instructor name overlap

--- a/src/components/MissionCard.module.css
+++ b/src/components/MissionCard.module.css
@@ -1,5 +1,5 @@
 .card {
-  height: 350px;
+  min-height: 360px;
   position: relative;
   background-position: center center;
   background-repeat: no-repeat;
@@ -9,33 +9,56 @@
   font-size: 13px;
 }
 
-.cardinfo {
+.card-info {
   background: #000;
   width: 100%;
-  padding: 10px 15px 15px;
+  padding: 10px 15px;
   position: absolute;
   z-index: 200;
-  height: 150px;
   bottom: 0;
 }
 
-.carddescription {
+.card-info h3 {
+  margin: 8px 0 8px;
+}
+
+.card-footer {
   margin-top: 10px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   text-align: left;
 }
 
-.cardinfo h3 {
-  margin: 8px 0 8px;
+.card-footer .avatar-row {
+  margin-bottom: 5px;
 }
 
-.blurb {
-  height: 50px;
+.card-description {
+  height: 70px;
 }
 
-.cardbutton {
-  position: absolute;
-  right: 10px;
-  bottom: 15px;
+.card-button {
+  flex: 0 0 auto;
+}
+
+/* -- Avatars -- */
+
+.avatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 1000px;
+  margin-right: 7px;
+}
+
+.avatar-name {
+  padding-bottom: 0;
+  text-transform: uppercase;
+}
+
+.avatar-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex: 0 0 auto;
 }
